# Machine-Projects

./: .clang-format  .gitignore  README.md  ruff.toml
ccprog1/: CMakeLists.txt  README.md
ccprog1/include/: console.h  prompts.h  text-graphics.h  trading.h
ccprog1/libs/: CmakeLists.txt  console.c  prompts.c  text-graphics.c  trading.c
ccprog1/src/: CmakeLists.txt  main.c
ccprog1/tests/: CmakeLists.txt  console-test.cpp  prompts-test.cpp  trading-test.cpp  utils.cpp
empowerment-technologies/: main.py  pyproject.toml
empowerment-technologies/docs/: README.md
